kubevirt/add-services/generated-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmi-name
  namespace: kubevirt-test-ns
  ownerReferences:
  - apiVersion: kubevirt.io/v1
    kind: VirtualMachineInstance
    name: vmi-name
spec:
  ports:
  - protocol: TCP
    port: 22
  selector:
    kubevirt.io/domain: "vmi-name"
