kubevirt/add-services/generatedResource.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmi-name
  namespace: default
  ownerReferences:
  - apiVersion: kubevirt.io/v1
    kind: VirtualMachineInstance
    name: vmi-name
    uid: feb5a62b-8784-41d2-b104-bf6ebc4a0000
spec:
  ports:
  - protocol: TCP
    targetPort: 22
    selector:
      kubevirt.io/domain: "vmi-name"
