kubevirt/add-services/vmi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt-test-ns
---
apiVersion: kubevirt.io/v1
kind: VirtualMachineInstance
metadata:
  name: vmi-name
  namespace: kubevirt-test-ns
  labels:
    kubevirt.io/domain: vmi-name
spec: 
  domain: 
    devices: {}
