kubevirt/add-services/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-service-ssh
policies:
- add-services.yaml
resources:
- resource.yaml
results:
- generatedResource: generatedResource.yaml
  kind: VirtualMachineInstance
  policy: k6t-add-services
  resources:
  - vmi-name
  result: pass
  rule: k6t-add-service-ssh
